ft:add roles and permission (#4)
