# src/middlewares/protectRoute.js
@@ -38,3 +38,14 @@ export const protect = async (req, res, next) => {
     );
   }
 };
+
+export const restrictTo = (...roles) => {
+  return (req, res, next) => {
+    if (!roles.includes(req.user.role)) {
+      return res.status(403).json({
+        message: "You are not authorized to perform this action",
+      });
+    }
+    next();
+  };
+};
